--- a/microservice-carro/src/main/resources/application.yaml
+++ b/microservice-carro/src/main/resources/application.yaml
@@ -1,26 +1,34 @@
-server:
-  port: 8082
-
+#Para trabajar con el config-server
 spring:
   application:
     name: microservice-carro
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bd_carros
-    username: root
-    password: serway2009
-  jpa:
-    hibernate:
-      ddl-auto: create
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQL8Dialect
   config:
     import: optional:configserver:http://localhost:8888
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#Para trabajar con eureka y gateway
+#server:
+#  port: 8082
+#
+#spring:
+#  application:
+#    name: microservice-carro
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/bd_carros
+#    username: root
+#    password: serway2009
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MySQL8Dialect
+#  config:
+#    import: optional:configserver:http://localhost:8888
+#
+#eureka:
+#  instance:
+#    hostname: localhost
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
