--- a/microservice-user/src/main/resources/application.yaml
+++ b/microservice-user/src/main/resources/application.yaml
@@ -1,26 +1,34 @@
-server:
-  port: 8081
-
+#Para trabajar con el config-server
 spring:
   application:
     name: microservice-user
-  datasource:
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://localhost:1433;databaseName=bd_users;encrypt=true;trustServerCertificate=true;
-    username: sa
-    password: serway2009
-  jpa:
-    hibernate:
-      ddl-auto: create
-    database: SQL_SERVER
-    database-platform: org.hibernate.dialect.SQLServerDialect
   config:
     import: optional:configserver:http://localhost:8888
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#Para trabajar con eureka y gateway
+#server:
+#  port: 8081
+#
+#spring:
+#  application:
+#    name: microservice-user
+#  datasource:
+#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+#    url: jdbc:sqlserver://localhost:1433;databaseName=bd_users;encrypt=true;trustServerCertificate=true;
+#    username: sa
+#    password: serway2009
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    database: SQL_SERVER
+#    database-platform: org.hibernate.dialect.SQLServerDialect
+#  config:
+#    import: optional:configserver:http://localhost:8888
+#
+#eureka:
+#  instance:
+#    hostname: localhost
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
